# gba

./: .gba.md  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  deny.toml
.chats/: 20260124.md
.gba/: config.yml
.gba/add-pr-in-status-yml/: state.yml
.gba/add-pr-in-status-yml/specs/: design.md  verification.md
.gba/centralized-git/: state.yml
.gba/centralized-git/specs/: design.md  verification.md
.gba/command-recover/: state.yml
.gba/command-recover/specs/: design.md  verification.md
.gba/command-remove/: state.yml
.gba/command-remove/specs/: design.md  verification.md
.gba/improve-code-quality/: state.yml
.gba/improve-code-quality/specs/: design.md  verification.md
.gba/improve-usage/: state.yml
.gba/improve-usage/specs/: design.md  verification.md
.gba/pr-option/: state.yml
.gba/pr-option/specs/: design.md  verification.md
.gba/update-readme/: state.yml
.gba/update-readme/specs/: design.md  verification.md
apps/gba-cli/: Cargo.toml
apps/gba-cli/src/: cli.rs  config.rs  error.rs  git.rs  main.rs  state.rs  utils.rs
apps/gba-cli/src/commands/: clean.rs  init.rs  list.rs  mod.rs  plan.rs  recover.rs  remove.rs  run.rs  status.rs
apps/gba-cli/src/tui/: app.rs  chat.rs  input.rs  mod.rs  progress.rs  run_app.rs
apps/gba-cli/src/web/: mod.rs  plan_app.rs  protocol.rs  run_app.rs  server.rs
apps/gba-cli/src/web/assets/: plan.html  run.html  test_output_perf.html
apps/gba-cli/tests/: cli_integration.rs
crates/gba-core/: Cargo.toml
crates/gba-core/src/: config.rs  engine.rs  error.rs  event.rs  git.rs  lib.rs  message.rs  session.rs  task.rs
crates/gba-pm/: Cargo.toml
crates/gba-pm/src/: error.rs  lib.rs  manager.rs
crates/gba-pm/templates/execute/: phase.j2  system.j2
crates/gba-pm/templates/init/: system.j2
crates/gba-pm/templates/plan/: system.j2
crates/gba-pm/templates/review/: system.j2
crates/gba-pm/templates/verification/: system.j2
docs/: arch.md
specs/: design.md
tasks/execute/: config.yml  system.j2  user.j2
tasks/fix/: config.yml  system.j2  user.j2
tasks/init/: config.yml  system.j2  user.j2
tasks/plan/: config.yml  system.j2  user.j2
tasks/pr/: config.yml  system.j2  user.j2
tasks/review/: config.yml  system.j2  user.j2
tasks/verification/: config.yml  system.j2  user.j2
