[workspace]
resolver = "2"
members = ["crates/*", "apps/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
repository = "https://github.com/tyrchen/gba"
homepage = "https://github.com/tyrchen/gba"
keywords = ["ai", "agent", "claude", "cli"]
categories = ["development-tools"]

[workspace.dependencies]
# Internal crates
gba-core = { path = "crates/gba-core" }
gba-pm = { path = "crates/gba-pm" }

# Async runtime
tokio = { version = "1.49", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "fs",
] }

# Claude Agent SDK
claude-agent-sdk-rs = "0.6"

# Template engine
minijinja = { version = "2.14", features = ["loader"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
typed-builder = "0.23"
uuid = { version = "1.16", features = ["v4"] }
futures = "0.3"
