[package]
name = "gba-cli"
description = "CLI for GBA (Geektime Bootcamp Agent)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "gba"
path = "src/main.rs"

[dependencies]
gba-core = { workspace = true }
gba-pm = { workspace = true }

tokio = { workspace = true }

clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.16"

[dev-dependencies]
tempfile = "3.15"
