[package]
name = "gba-core"
description = "Core execute engine for GBA (Geektime Bootcamp Agent)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
gba-pm = { workspace = true }

tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

typed-builder = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.16"
